Corrected manager card div that was overlapping with the name in prod

--- a/app/assets/stylesheets/components/_users_item.scss
+++ b/app/assets/stylesheets/components/_users_item.scss
@@ -30,8 +30,11 @@
       color: #006F7D;
     }
   }
-  .user-info {
+  .manager-info {
     color: white;
+    font-size: 12px;
+    text-align: right;
+    margin-bottom: 10px;
   }
   .list-controls .btn {
     background: $blue;
